examples/failing/MutRec.purs
module MutRec where

import Prelude

x = y

y = x
